--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
 <ul>
   <li><a href="index.html">Rebelion</a></li>
   <li><a href="spie.html">SPIE</a></li>
+  <li><a href="backgroundinfo.html">Info</a></li>
+  <li><a href="reasonwhy.html"> Why</a></li>
   </ul>
+  
+  <h1 style ="text-align: center;"><font face="Courier" color="white"> Join the Rebellion now! <font face="verdana" color="white"></h1>
+  <div style="float:center;"> 
+    
