--- a/backgroundinfo.html
+++ b/backgroundinfo.html
@@ -4,7 +4,7 @@
 <link href="stylesheet.css" type="text/css" rel="stylesheet">
 <ul>
   <li><a href="index.html">Rebellion</a></li>
-  <li><a href="heros.html">Heroes</a></li>
+  <li><a href="heros.html">Heroes/Villains</a></li>
   <li><a href="backgroundinfo.html"> Info</a></li>
   <li><a href="reasonwhy.html">Why</a></li>
   </ul>
