--- a/heros.html
+++ b/heros.html
@@ -11,7 +11,7 @@
 <h1 style="text-align: center;"><font face="Courier" color="white"> Heroes of the War<font face="verdana" color="white"></h1>
 
 <div><p> Below are photos of the our heroes and your teammates in that war!!!</p></div>
-<img src="images/lukephoto1.PNG" align="left" style="width:600px;height:600px;" hspace="150" vspace="50"/>
+<img src="images/lukephoto1.png" align="left" style="width:600px;height:600px;" hspace="150" vspace="50"/>
 <img src="images/yodaphoto1.PNG" style="width:600px;height:600px;" hspace="150" vspace="50"/>
 <img src="images/kenobiphoto1.PNG" style="width:600px;height:600px;" hspace="150" vspace="50"/>
 <img src="images/hansolophoto1.JPG" style="width:600px;height:600px;" hspace="150" vspace="50"/>
