--- a/backgroundinfo.html
+++ b/backgroundinfo.html
@@ -11,4 +11,4 @@
  
 <h1 style="text-align: center;"><font face="Courier" color="white">Background Information on the Rebellion Alliance<font face="verdana" color="white"></h1>
 <div style="float:center"><p style="text-align: center;">The Rebellion Alliance which is short for Alliance to Restore the Republic is a group of people who fight to keep the peace and not let the bad guys take over, it consist of many warriors and once many jedis. Even though the time of the Jedi is not now we need more people to join us and fight them and protect the land we are from and not let our families suffer from them. </center></p></div>
-<img src="images/rebellionSticker.PNG" style="width:600px;height:600px;" hspace="660" vspace="50"/>
+<img src="images/rebellionSticker.png" style="width:600px;height:600px;" hspace="660" vspace="50"/>
