--- a/heros.html
+++ b/heros.html
@@ -10,13 +10,13 @@
   </ul>
 <h1 style="text-align: center;"><font face="Courier" color="white"> Heroes of the War<font face="verdana" color="white"></h1>
 
-<div><p> Below are photos of the our heroes and your teammates in that war!!!</p></div>
+  <div><p> Below are photos of the our heroes and your teammates in that war!!!</p>
 <img src="images/lukephoto1.png" align="left" style="width:600px;height:600px;" hspace="150" vspace="50"/>
 <img src="images/yodaphoto1.png" style="width:600px;height:600px;" hspace="150" vspace="50"/>
 <img src="images/kenobiphoto1.png" style="width:600px;height:600px;" hspace="150" vspace="50"/>
 <img src="images/hansolophoto1.jpg" style="width:600px;height:600px;" hspace="150" vspace="50"/>
-
-<h1 style="text-align: center;"><font face="Courier" color="white">Scums of the war<font face="verdana" color="white"></h1>\
+</div>
+<h1 style="text-align: center;"><font face="Courier" color="white">Scums of the war<font face="verdana" color="white"></h1>
 
 <div><p> Now below here are the photos of the scums that think can beat us, if you have an opportunity to kill them don't hesitate you will be honored!<p>
 
